make fuel prices chart more user friendly. created categoires to track nils to diplay on chart. changes summer and winter to green and blue. added dropdown to switch between survey and regional price type to be more transparant. since x-axis bar grouped by year there is one tooltip per group for chartkick.

--- a/app/views/communities/sections/_fuel_prices.html.haml
+++ b/app/views/communities/sections/_fuel_prices.html.haml
@@ -9,7 +9,7 @@
       .d-flex.justify-content-between.align-items-center
         .nav.nav-tabs
           %li.nav-item
-            = link_to "Charts", "#fuel-prices-chart",
+            = link_to "Chart", "#fuel-prices-chart",
               class: "nav-link active",
               data: { bs_toggle: "tab" }
           %li.nav-item
