Add village_corporation field to community table as string, updated import attributes. added to display under regional corp under geography. valdiated data import no breaks when testing.

--- a/app/views/communities/sections/background/_geography.html.haml
+++ b/app/views/communities/sections/background/_geography.html.haml
@@ -31,6 +31,11 @@
             %th.pe-3 Regional Corporation
             %td= @community.regional_corporation.name
 
+        - if @community.village_corporation.present?
+          %tr
+            %th.pe-3 Village Corporation
+            %td= @community.village_corporation
+
         - if @community.grid.present?
           %tr
             %th.pe-3 Grid
