--- a/app/views/communities/sections/electricity/_capacity.html.haml
+++ b/app/views/communities/sections/electricity/_capacity.html.haml
@@ -3,7 +3,7 @@
 
 .d-flex.align-items-center.mb-3
   %i.bi.bi-lightning-fill.me-2.fs-4
-  %h4.mb-0.me-3 Capacity
+  %h4#capacity.mb-0.me-3.py-3 Capacity
   %hr.flex-grow-1.mt-1.mb-0
 .mb-3
   = render 'communities/shared/grid_info'
