--- a/app/views/communities/sections/_electricity.html.haml
+++ b/app/views/communities/sections/_electricity.html.haml
@@ -1,23 +1,15 @@
-- content_for :quicknav do
-  %ul.nav.flex-column
-    %li.nav-item
-      = link_to "Utilities", "#utilities", class: 'nav-link'
-    %li.nav-item
-      = link_to "Production", "#production", class: 'nav-link'
-    %li.nav-item
-      = link_to "Rates", "#rates", class: 'nav-link'
-- if @community.reporting_entity
+- if show_utilities?(@community)
   .m-5.mt-3
     = render 'communities/sections/electricity/utilities'
-- if @community.electric_rates&.any? { |rate| rate.residential_rate || rate.commercial_rate || rate.industrial_rate }
+- if show_rates?(@community)
   .m-5
     = render 'communities/sections/electricity/rates'
-- if @community.grid&.monthly_generations&.exists? || @community.grid&.yearly_generations&.exists?
+- if show_production?(@community)
   .m-5
     = render 'communities/sections/electricity/production'
-- if @community.grid&.capacities&.exists?
+- if show_capacity?(@community)
   .m-5
     = render 'communities/sections/electricity/capacity'
-- if @community.reporting_entity&.sales&.exists?
+- if show_sales_revenue_customers?(@community)
   .m-5
     = render 'communities/sections/electricity/sales_revenue_customers'
