--- a/app/views/communities/sections/background/_election_districts.html.haml
+++ b/app/views/communities/sections/background/_election_districts.html.haml
@@ -1,6 +1,6 @@
-.d-flex.align-items-center.mb-5
+.d-flex.align-items-center.mb-3
   %i.bi.bi-map.me-2.fs-4
-  %h4.mb-0.me-3 Election Districts
+  %h4#election-districts.mb-0.me-3.py-3 Election Districts
   %hr.flex-grow-1.mt-1.mb-0
 = render "communities/sections/background/election_districts/district_overview"
 
