--- a/app/views/communities/sections/background/_transportation.html.haml
+++ b/app/views/communities/sections/background/_transportation.html.haml
@@ -1,6 +1,6 @@
 .d-flex.align-items-center.mb-3
   %i.bi.bi-car-front.me-2.fs-4
-  %h4.mb-0.me-3 Transportation
+  %h4#transportation.mb-0.me-3.py-3 Transportation
   %hr.flex-grow-1.mt-1.mb-0
 .mb-3
   %small.text-muted
