--- a/app/views/communities/sections/electricity/_sales_revenue_customers.html.haml
+++ b/app/views/communities/sections/electricity/_sales_revenue_customers.html.haml
@@ -1,6 +1,6 @@
 .d-flex.align-items-center.mb-3
   %i.bi.bi-cash-coin.me-2.fs-4
-  %h4.mb-0.me-3 Sales, Revenue & Customers
+  %h4#sales-revenue-customers.mb-0.me-3.py-3 Sales, Revenue & Customers
   %hr.flex-grow-1.mt-1.mb-0
 
 - latest_sale = @community.reporting_entity.latest_sale
