Add nav_link helper method to apply DRY principles

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -270,3 +270,9 @@
   text-decoration: none;
   font-weight: 500;
 }
+
+#quick-nav .nav-link:hover {
+  background-color: $gray-200; 
+  color: darken($primary, 25%);
+  border-radius: 0.25rem;
+}
