AEDG-493 Fix PCE typo

--- a/app/views/communities/sections/electricity/_utilities.html.haml
+++ b/app/views/communities/sections/electricity/_utilities.html.haml
@@ -10,7 +10,7 @@
         - pce_icon = @community.pce_eligible ? "bi-patch-check-fill text-success" : "bi-x-circle-fill text-danger"
         %i{ class: "bi #{pce_icon} fs-4 me-3" }
         .flex-grow-1
-          .text-muted Price Cost Equalization (PCE) Status
+          .text-muted Power Cost Equalization (PCE) Status
           .fw-semibold= @community.pce_eligible ? "Eligible" : "Ineligible"
   - main_utility = @community.reporting_entity&.name
   - other_utilities = @community.grid.reporting_entities.map(&:name).uniq.reject { |name| name == main_utility }
