Update district section layout, update views to render based on new associations (not CommunitiesLegislativeDistricts), display senate and house data seperately

--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -1,13 +1,19 @@
+.map {
+  width: 100%;
+  height: 250px;
+}
+
 $map-sizes: (
-  sm: 200px,
+  sm: 250px,
   md: 300px,
   lg: 400px,
   xl: 500px,
 );
 
 @each $size, $height in $map-sizes {
-  .map-#{$size} {
-    width: 100%;
-    height: $height;
+  @include media-breakpoint-up($size) {
+    .map {
+      height: $height;
+    }
   }
 }
