--- a/app/views/communities/sections/background/_election_districts.html.haml
+++ b/app/views/communities/sections/background/_election_districts.html.haml
@@ -1,46 +1,60 @@
+/ Title & Overview
 .d-flex.align-items-center.mb-3
   %i.bi.bi-map.me-2.fs-4
   %h4#election-districts.mb-0.me-3.py-3 Election Districts
   %hr.flex-grow-1.mt-1.mb-0
+
 = render "communities/sections/background/election_districts/district_overview"
 
-/ Navigation Tabs
-.d-flex.justify-content-between.align-items-center.mt-4
-  .nav.nav-tabs
-    %li.nav-item
-      = link_to "District Map", "#districtsMapWrapper", class: "nav-link active", data: { bs_toggle: "tab"}
-    %li.nav-item 
-      = link_to "District Data", "#districtData", class: "nav-link", data: { bs_toggle: "tab" }
+/ Two-Column Layout: Map Left, Tabs Right
+.row.g-4.mt-4
+  / Left Column: Map
+  .col-12.col-xl-6.mb-4
+    - if show_election_districts?(@community)
+      #districtsMapWrapper.tab-pane.fade.show.active{
+        data: mapbox_api_data({
+          maps_map_center_value: [@community.longitude, @community.latitude],
+          maps_default_layer_url_value: house_districts_community_maps_path(@community, format: :json)
+        })
+      }
+        %h5.fw-semibold.text-muted.mb-3 Legislative Districts Map
+        .d-flex.gap-2.mb-3.align-items-center
+          - if show_house_districts?(@community)
+            %button.btn.btn-outline-primary.active{
+              data: {
+                action: "click->maps#selectLayer",
+                url: house_districts_community_maps_path(@community, format: :json),
+                color: "#088",
+                outline_color: "#05505e"
+              }
+            } House Districts
+          - if show_senate_districts?(@community)
+            %button.btn.btn-outline-primary{
+              data: {
+                action: "click->maps#selectLayer",
+                url: senate_districts_community_maps_path(@community, format: :json),
+                color: "#e67e22",
+                outline_color: "#a84300"
+              }
+            } Senate Districts
 
-/ Tab Content
-.tab-content.mt-3
-  #districtsMapWrapper.tab-pane.fade.show.active{
-    data: mapbox_api_data({
-      maps_map_center_value: [@community.longitude, @community.latitude],
-      maps_default_layer_url_value: house_districts_community_maps_path(@community, format: :json)
-    })
-  }
-    .d-flex.gap-2.mb-2.align-items-center
-      %button.btn.btn-outline-primary.active{
-        data: {
-          action: "click->maps#selectLayer",
-          url: house_districts_community_maps_path(@community, format: :json),
-          color: "#088",
-          outline_color: "#05505e"
-        }
-      } House Districts
+        .map.rounded{ data: { maps_target: "map" } }
 
-      %button.btn.btn-outline-primary{
-        data: {
-          action: "click->maps#selectLayer",
-          url: senate_districts_community_maps_path(@community, format: :json),
-          color: "#e67e22",
-          outline_color: "#a84300"
-        }
-      } Senate Districts
-      %span{ data: { maps_target: "loading" }}
+  / Right Column: Tabs + Data
+  .col-12.col-xl-6
+    .nav.nav-tabs.mb-2
+      - if show_house_districts?(@community)  
+        %li.nav-item 
+          = link_to "House District Data", "#HouseDistrictData", class: "nav-link active", data: { bs_toggle: "tab" }
+      - if show_senate_districts?(@community) 
+        %li.nav-item 
+          = link_to "Senate District Data", "#SenateDistrictData", class: "nav-link", data: { bs_toggle: "tab" }
 
-    .map-md.rounded{ data: { maps_target: "map" }}
+    .tab-content
+      - if show_house_districts?(@community) 
+        #HouseDistrictData.tab-pane.fade.show.active
+          = render "communities/sections/background/election_districts/house_district_data"
 
-  #districtData.tab-pane.fade
-    = render "communities/sections/background/election_districts/district_data"
+      - if show_senate_districts?(@community) 
+        #SenateDistrictData.tab-pane.fade
+          = render "communities/sections/background/election_districts/senate_district_data"
