--- a/app/views/communities/sections/background/_geography.html.haml
+++ b/app/views/communities/sections/background/_geography.html.haml
@@ -12,7 +12,7 @@
         maps_marker_tooltip_title_value: @community.name
       })
     }
-      .map-sm.rounded{ data: { maps_target: "map" } }
+      .map.rounded{ data: { maps_target: "map" } }
 
   .col-md-8
     %table.table.table-hover
