add simple view for school districts names types and notes

--- a/app/views/communities/sections/_background.html.haml
+++ b/app/views/communities/sections/_background.html.haml
@@ -8,9 +8,9 @@
 - if show_election_districts?(@community)
   .m-5
     = render 'communities/sections/background/election_districts'
-
+  .m-5
+    = render 'communities/sections/background/school_districts'
 - if show_population?(@community)
   .m-5
     = render 'communities/sections/background/population'
-
 
