--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -27,8 +27,8 @@
         %strong.mb-2.d-block Contact
         %p.text-muted.mb-0
           Please contact 
-          %a.text-decoration-none{ href: "mailto:[AEDG_EMAIL]@alaska.edu" }
-            [AEDG_EMAIL]@alaska.edu
+          %a.text-decoration-none{ href: "mailto:akenergygateway@alaska.edu" }
+            akenergygateway@alaska.edu
           with any questions or comments.
 
     / Footer bottom
