--- a/app/views/communities/sections/electricity/production/_yearly_chart.html.haml
+++ b/app/views/communities/sections/electricity/production/_yearly_chart.html.haml
@@ -5,7 +5,7 @@
     library: { plugins: { legend: { title: { display: true, text: "Fuel Type"} } } },
     download: { filename: chart_title.parameterize}})
 
-#yearly-prod-chart{ data: { controller: "fuel-chart", fuel_chart:{
+#yearly-prod-chart.responsive-fuel-chart{ data: { controller: "fuel-chart", fuel_chart:{
     url_value: production_yearly_community_charts_path(@community),
     chart_type_value: "pie",
     options_value: chart_options.to_json
