AEDG-442 update Data Creation Step links/wording

--- a/app/views/static_pages/_data_creation_process.html.haml
+++ b/app/views/static_pages/_data_creation_process.html.haml
@@ -7,7 +7,7 @@
         The Alaska Energy Data Gateway (AEDG) gives you access to carefully selected energy data, enriched with helpful context. Instead of pulling data from just anywhere, AEDG follows a several step process to ensure what you see is accurate, relevant, and easy to use.
 
       %p.text-muted.mt-3
-        Here’s a look at how the datasets were built – so you can feel confident in the source and quality of the data you’re working with.
+        Here’s a look at how the datasets were built, so you can feel confident in the source and quality of the data you’re working with.
 
     .col-lg-6.pt-5
       %ul.timeline
