Update/add FAQ questions AEDG-507

--- a/app/views/static_pages/_navigating_aedg.html.haml
+++ b/app/views/static_pages/_navigating_aedg.html.haml
@@ -19,11 +19,13 @@
         %i.bi.bi-search.fs-4
       %h5.fw-bold Step 2: Search for Relevant Data
       %p.text-muted
-        Once inside, use search tools and filters to find datasets of interest or explore community-specific insights by using the "Quick Links" feature.
+        In the Data Explorer, use search and filters to find datasets of interest.
+      %p.text-muted
+        In Community Summaries, browse "On This Page" or scroll to view key energy and socioeconomic data for each community.
 
     .col-md-4.mb-4
       .circle-icon.mb-4
         %i.bi.bi-download.fs-4
       %h5.fw-bold Step 3: Download and Analyze Data
       %p.text-muted
-        Download datasets or summaries directly to your device for further analysis and research.
+        Download datasets and metadata directly to your device for further analysis and research.
