AEDG-500 Add operators (array of strings) to communities and display it under Electricity/Operators on community summary

--- a/app/views/communities/sections/_electricity.html.haml
+++ b/app/views/communities/sections/_electricity.html.haml
@@ -1,6 +1,9 @@
 - if show_utilities?(@community)
   .m-5.mt-3
     = render 'communities/sections/electricity/utilities'
+- if show_operators?(@community)
+  .m-5
+    = render 'communities/sections/electricity/operators'
 - if show_rates?(@community)
   .m-5
     = render 'communities/sections/electricity/rates'
