--- a/app/views/communities/sections/_quick_nav.html.haml
+++ b/app/views/communities/sections/_quick_nav.html.haml
@@ -10,6 +10,9 @@
         - if show_utilities?(@community)  
           %li.nav-item
             = nav_link "Utilities", "#utilities"
+        - if show_operators?(@community)  
+          %li.nav-item
+            = nav_link "Operators", "#operators"
         - if show_rates?(@community)    
           %li.nav-item
             = nav_link "Rates", "#rates"
