--- a/app/views/communities/sections/_electricity.html.haml
+++ b/app/views/communities/sections/_electricity.html.haml
@@ -1,15 +1,15 @@
-- if show_utilities?(@community)
+- if @community.show_utilities?
   .my-5.mx-3.mx-md-5.mt-3
     = render 'communities/sections/electricity/utilities'
-- if show_rates?(@community)
+- if @community.show_rates?
   .my-5.mx-3.mx-md-5
     = render 'communities/sections/electricity/rates'
-- if show_production?(@community)
+- if @community.show_production?
   .my-5.mx-3.mx-md-5
     = render 'communities/sections/electricity/production'
-- if show_capacity?(@community)
+- if @community.show_capacity?
   .my-5.mx-3.mx-md-5
     = render 'communities/sections/electricity/capacity'
-- if show_sales_revenue_customers?(@community)
+- if @community.show_sales_revenue_customers?
   .my-5.mx-3.mx-md-5
     = render 'communities/sections/electricity/sales_revenue_customers'
