Refactor Prices section related helper methods into community model methods

--- a/app/views/communities/sections/_prices.html.haml
+++ b/app/views/communities/sections/_prices.html.haml
@@ -1,4 +1,4 @@
-- if show_fuel_prices?(@community)
+- if @community.show_fuel_prices?
   .my-5.mx-3.mx-md-5.mt-3
     .d-flex.align-items-center.mb-3
       %i.bi.bi-fuel-pump-fill.me-2.fs-4
