--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -34,7 +34,7 @@
 
       - section_order = []
       - section_order << 'electricity' if @community.show_electricity_section?
-      - section_order << 'prices' if show_prices_section?(@community)
+      - section_order << 'prices' if @community.show_prices_section?
       - section_order << 'background' if show_background_section?(@community)
 
       - section_order.each do |section|
