--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -35,7 +35,7 @@
       - section_order = []
       - section_order << 'electricity' if @community.show_electricity_section?
       - section_order << 'prices' if @community.show_prices_section?
-      - section_order << 'background' if show_background_section?(@community)
+      - section_order << 'background' if @community.show_background_section?
 
       - section_order.each do |section|
         - section_id = "#{section.parameterize}-section"
