--- a/app/views/communities/sections/_quick_nav.html.haml
+++ b/app/views/communities/sections/_quick_nav.html.haml
@@ -40,9 +40,9 @@
         - if @community.show_transportation?
           %li.nav-item
             = nav_link "Transportation", "#transportation"
-        - if @community.show_election_districts?
+        - if @community.show_legislative_districts?
           %li.nav-item
-            = nav_link "Election Districts", "#election-districts"
+            = nav_link "Legislative Districts", "#legislative-districts"
         - if @community.show_population? 
           %li.nav-item
             = nav_link "Population", "#population"
