--- a/app/views/communities/sections/background/_legislative_districts.html.haml
+++ b/app/views/communities/sections/background/_legislative_districts.html.haml
@@ -1,16 +1,16 @@
 / Title & Overview
 .d-flex.align-items-center.mb-3
   %i.bi.bi-map.me-2.fs-4
-  %h4#election-districts.mb-0.me-3.py-3 Election Districts
+  %h4#legislative-districts.mb-0.me-3.py-3 Legislative Districts
   %hr.flex-grow-1.mt-1.mb-0
 
-= render "communities/sections/background/election_districts/district_overview"
+= render "communities/sections/background/legislative_districts/district_overview"
 
 / Two-Column Layout: Map Left, Tabs Right
 .row.g-4.mt-4
   / Left Column: Map
   .col-12.col-xl-6
-    - if @community.show_election_districts?
+    - if @community.show_legislative_districts?
       #districtsMapWrapper.tab-pane.fade.show.active{
         data: mapbox_api_data({
           maps_map_center_value: [@community.longitude, @community.latitude],
@@ -53,8 +53,8 @@
     .tab-content
       - if @community.show_house_districts? 
         #HouseDistrictData.tab-pane.fade.show.active
-          = render "communities/sections/background/election_districts/house_district_data"
+          = render "communities/sections/background/legislative_districts/house_district_data"
 
       - if @community.show_senate_districts? 
         #SenateDistrictData.tab-pane.fade
-          = render "communities/sections/background/election_districts/senate_district_data"
+          = render "communities/sections/background/legislative_districts/senate_district_data"
