update school distrcit model and join table to be created and designed as house and senate districts. district external id for schools are int arrays.

--- a/app/views/communities/sections/background/_school_districts.html.haml
+++ b/app/views/communities/sections/background/_school_districts.html.haml
@@ -1,3 +1,3 @@
-
-= render "communities/sections/background/school_districts/district_overview"
+- if show_school_districts?(@community)
+    = render "communities/sections/background/school_districts/district_overview"
 
