--- a/app/views/communities/sections/_quick_nav.html.haml
+++ b/app/views/communities/sections/_quick_nav.html.haml
@@ -43,6 +43,7 @@
         - if show_election_districts?(@community)
           %li.nav-item
             = nav_link "Election Districts", "#election-districts"
+        - if show_school_districts?(@community)
           %li.nav-item
             = nav_link "School Districts", "#school-districts"
         - if show_population?(@community) 
